ajout des elements graphiques et .md